- Upgrade to Java 17 - Run unit tests with Mongo 6.x and Mongo 7.x - Move common test configuration to a test module. Move logs to be under target and log4j.xml file to test module - Move MongoId annotation to core.  Remove unnecessary duplicate classes - Since QueryProvider is the same for Reactive and Sync operations, move it to cor eand use the same provider for both modules - Removed unnecessary nesting of parent projects since the same Spring libraries provide support for Reactive and Sync execution.  The only difference is in the Mongo drivers and the project structure now correctly reflects that difference - Successful migration to Spring 6.0 and Mongo 7.0 - Fixed NonReactiveQueryProvider